ADD > Modal before deleting

--- a/resources/scss/partials/_characters.scss
+++ b/resources/scss/partials/_characters.scss
@@ -1,1 +1,15 @@
+.c-modal {
+    &.show {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    display: none;
+    position: fixed;
+    inset: 0;
 
+    &__inner {
+        backdrop-filter: blur(10px);
+        border: 2px solid #000;
+    }
+}
